@@ -2136,3 +2136,5 @@
 * pheno:   Lua API: added RO access to gentity field pers.etpubc
 * pheno:   Lua API: added chat commands "c", "tc" and "bc" to et.trap_SendServerCommand()
            library call (http://wolfwiki.anime.net/index.php/SendServerCommand)
+* pheno:   Lua API: fixed a bug in chat command handling where the chat message will be sent
+           even if the player is not on the server
